--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 
 nav{
 	height: 60px;
-    background-color: #1B1B1B;
+    background-color: #1B242B;
     top: 0;
     position: fixed;
     width: 100%;
@@ -56,7 +56,7 @@ nav{
 	border-bottom: 1px solid #727272;
 }
 .headersection{
-	height: 100vh;
+	height: 90vh;
 	background-color: #2C3A46;
 	background-attachment: fixed;
 	background-position: center;
@@ -67,7 +67,7 @@ nav{
     flex-direction:column;
     align-items:center;
     justify-content: center;
-    background-image: url(../img/artist.jpg);
+    background-image: url(../img/artist1.jpg);
     width: 100%;
 }
 
@@ -90,32 +90,28 @@ nav{
     font-weight: 300;
 }
 .intro1 span{
-	color: #2C3A46;
+	color: grey;
 	transform:rotate(40deg);
 }
 .aboutsection{
 	border-bottom: 1px solid rgba(128, 128, 128, 0.41);
 }
 .aboutsection h2 ,.skillssection h2{
-	text-align: center;
-	padding-top: 40px;
-	font-size: 30px;
-	font-family: 'Montserrat', sans-serif;
-	color: #474747;
+	
 	padding-bottom: 3px;
 	border-bottom: 3px solid;
-	margin: auto;
 }
 
 h2{
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 40px;
 	font-size: 30px;
 	font-family: 'Montserrat', sans-serif;
 	padding-bottom: 3px;
 	border-bottom: 3px solid;
 	width: 220px;
-	margin: auto
+	margin: auto;
+	color: #1B242B;
 }
 
 .profilepic{
@@ -157,7 +153,7 @@ h2{
 	background:#2C3A46;
 }
 .porfoliosection{
-	background:#1B1B1B;
+	background:#1B242B;
 	margin: auto;
 	position: relative;
 }
