--- a/style.css
+++ b/style.css
@@ -135,7 +135,6 @@ video {
 }
 
 .projects {
-  padding-bottom: 50px;
   background: #fafafa;
   display: flex;
   justify-content: center;
@@ -272,25 +271,27 @@ video {
   transform: scale(1.3);
 }
 
-.projects a {
-  margin: 50px auto 0 auto;
+.projects .external-links {
+  margin: 0 auto;
+  padding: 80px 0;
 }
 
 .btn {
   border: 0;
   padding: 13px;
-  background-image: linear-gradient(
-    to right,
-    #72d5e0 0%,
-    rgba(121, 203, 202, 0.98) 51%,
-    rgb(119, 161, 211) 100%
-  );
   color: white;
   border-radius: 3px;
   font-family: "Source Code Pro", sans-serif !important;
   outline: none;
   cursor: pointer;
   font-size: inherit;
+  width: 250px;
+}
+.btn-projects {
+  background: #000;
+}
+.btn-github {
+  background: #3d92ff;
 }
 
 .projects .btn:hover {
@@ -475,6 +476,9 @@ video {
 /*MEDIA QUERIES*/
 
 @media (max-width: 1020px) {
+  .sideNav {
+    bottom: 0;
+  }
   .contact form {
     border: 0;
     padding: 30px 50px;
