--- a/style.css
+++ b/style.css
@@ -532,7 +532,7 @@ a:hover {
 	.projects img:hover {
 		transform: scale(1);
 		box-shadow: 1px 5px 10px lightgrey;
-		cursor: pointer;
+
 		filter: blur(0px);
 		-webkit-filter: blur(0px);
 	}
@@ -600,6 +600,7 @@ a:hover {
 	.speciality {
 		display: flex;
 		flex-direction: column;
+		width: 80%;
 	}
 	.skills h1 {
 		font-size: 40px;
